# shared/api/bundles/order.openapi.v1.bundle.yaml
@@ -317,13 +317,15 @@ components:
   schemas:
     user_uuid:
       type: string
+      format: uuid
       description: UUID пользователя
       example: c9b9c2e6-a2d9-4f9d-b3b4-e2b2c3d4e5f6
     part_uuids:
       type: array
+      description: Список UUID деталей
       items:
         type: string
-        description: UUID детали
+        format: uuid
         example: c9b9c2e6-a2d9-4f9d-b3b4-e2b2c3d4e5f6
     create_order_request:
       type: object
@@ -334,14 +336,21 @@ components:
         user_uuid:
           allOf:
             - $ref: '#/components/schemas/user_uuid'
-            - description: UUID пользователя
+            - type: string
+              format: uuid
+              description: UUID пользователя
               example: 00000000-0000-0000-0000-000000000000
         part_uuids:
           allOf:
             - $ref: '#/components/schemas/part_uuids'
-            - description: UUID деталей
+            - type: array
+              description: UUID деталей
+              items:
+                type: string
+                format: uuid
               example:
                 - 00000000-0000-0000-0000-000000000000
+                - 11111111-1111-1111-1111-111111111111
     generic_error:
       type: object
       properties:
@@ -353,10 +362,12 @@ components:
           description: Описание ошибки
     order_uuid:
       type: string
+      format: uuid
       description: UUID заказа
       example: c9b9c2e6-a2d9-4f9d-b3b4-e2b2c3d4e5f6
     total_price:
       type: number
+      format: float
       description: Сумма заказа
       example: 100
     create_order_response:
@@ -367,12 +378,16 @@ components:
         order_uuid:
           allOf:
             - $ref: '#/components/schemas/order_uuid'
-            - description: UUID заказа
+            - type: string
+              format: uuid
+              description: UUID заказа
               example: 00000000-0000-0000-0000-000000000000
         total_price:
           allOf:
             - $ref: '#/components/schemas/total_price'
-            - description: Сумма заказа
+            - type: number
+              format: float
+              description: Сумма заказа
               example: 100
     bad_request_error:
       type: object
@@ -502,18 +517,24 @@ components:
           example: 'Service Unavailable: Service is unavailable'
     payment_method:
       type: integer
-      enum:
-        - 0
-        - 1
-        - 2
-        - 3
-        - 4
-      x-speakeasy-enums:
-        '0': UNKNOWN
-        '1': CARD
-        '2': SBP
-        '3': CREDIT_CARD
-        '4': INVESTOR_MONEY
+      oneOf:
+        - enum:
+            - 0
+          description: UNKNOWN
+        - enum:
+            - 1
+          description: CARD
+        - enum:
+            - 2
+          description: SBP
+        - enum:
+            - 3
+          description: CREDIT_CARD
+        - enum:
+            - 4
+          description: INVESTOR_MONEY
+      description: Способ оплаты
+      example: 1
     pay_order_request:
       type: object
       required:
@@ -522,10 +543,12 @@ components:
         payment_method:
           allOf:
             - $ref: '#/components/schemas/payment_method'
-            - description: Способ оплаты
+            - type: integer
+              description: Способ оплаты
               example: 1
     transaction_uuid:
       type: string
+      format: uuid
       description: UUID транзакции
       example: c9b9c2e6-a2d9-4f9d-b3b4-e2b2c3d4e5f6
     pay_order_response:
@@ -536,55 +559,75 @@ components:
         transaction_uuid:
           allOf:
             - $ref: '#/components/schemas/transaction_uuid'
-            - description: UUID транзакции
+            - type: string
+              format: uuid
+              description: UUID транзакции
               example: 00000000-0000-0000-0000-000000000000
     order_status:
       type: string
+      description: Статус заказа
       enum:
         - PENDING_PAYMENT
         - PAID
         - CANCELLED
+      example: PENDING_PAYMENT
     get_order_response:
       type: object
       required:
         - order_uuid
         - user_uuid
+        - part_uuids
       properties:
         order_uuid:
           allOf:
             - $ref: '#/components/schemas/order_uuid'
-            - description: UUID заказа
+            - type: string
+              format: uuid
+              description: UUID заказа
               example: 00000000-0000-0000-0000-000000000000
         user_uuid:
           allOf:
-            - $ref: '#/components/schemas/order_uuid'
-            - description: UUID пользователя
+            - $ref: '#/components/schemas/user_uuid'
+            - type: string
+              format: uuid
+              description: UUID пользователя
               example: 00000000-0000-0000-0000-000000000000
         part_uuids:
           allOf:
             - $ref: '#/components/schemas/part_uuids'
-            - description: UUID деталей
+            - type: array
+              description: UUID деталей
+              items:
+                type: string
+                format: uuid
               example:
                 - 00000000-0000-0000-0000-000000000000
+                - 11111111-1111-1111-1111-111111111111
         total_price:
           allOf:
             - $ref: '#/components/schemas/total_price'
-            - description: Сумма заказа
+            - type: number
+              format: float
+              description: Сумма заказа
               example: 100
         transaction_uuid:
           allOf:
             - $ref: '#/components/schemas/transaction_uuid'
-            - description: UUID транзакции
+            - type: string
+              format: uuid
+              description: UUID транзакции
               example: 00000000-0000-0000-0000-000000000000
         payment_method:
           allOf:
             - $ref: '#/components/schemas/payment_method'
-            - description: Способ оплаты
+            - type: integer
+              description: Способ оплаты
               example: 1
         status:
           allOf:
             - $ref: '#/components/schemas/order_status'
-            - description: Статус заказа
+            - type: string
+              description: Статус заказа
               example: PENDING_PAYMENT
   parameters:
     order_uuid:
